chore: stop tracking local symlinks and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ __pycache__/
 .venv/
 tmp/
 *.swp
+
+# Symlinks/Local Config
+gemini_settings.json
+HomeLabAI_Dev
+
+# Editors
+.vscode/
+
+# Python
+*.pyc
