--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - monitoring
     depends_on:
       - prometheus
+      - loki
 
   # 3. The "Base" Telemetry (Real Linux Metrics)
   node-exporter:
@@ -59,6 +60,30 @@ services:
       - /proc/stat:/host/proc/stat:ro                  # Read real CPU load
     ports:
       - "8000:8000"
+    networks:
+      - monitoring
+
+  # 5. Loki (Log Aggregation)
+  loki:
+    image: grafana/loki:2.9.2
+    container_name: field_loki
+    volumes:
+      - ./loki/local-config.yaml:/etc/loki/local-config.yaml
+    command: -config.file=/etc/loki/local-config.yaml
+    ports:
+      - "3100:3100"
+    networks:
+      - monitoring
+
+  # 6. Promtail (Log Shipper)
+  promtail:
+    image: grafana/promtail:2.9.2
+    container_name: field_promtail
+    volumes:
+      - ./promtail/config.yml:/etc/promtail/config.yml
+      - ../field_notes/data:/var/log/field_notes:ro  # Pinky Logs
+      - /var/log:/var/log/host:ro                    # System Logs (dmesg/syslog)
+    command: -config.file=/etc/promtail/config.yml
     networks:
       - monitoring
 
