feat: deploy Artifact Map (V3) and enhance Field Manual search isolation

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ HomeLabAI_Dev
 
 # Sensitive Documentation
 Travel_Guide_2026.md
+monitor/secrets.json
 
 # Field Notes Data (Private Logs/Indices)
 field_notes/data/
