--- a/field_notes/.eslintrc.json
+++ b/field_notes/.eslintrc.json
@@ -1,13 +1,14 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2020": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
+    "globals": { "EasyMDE": "readonly" },
     "rules": {
         "no-unused-vars": "warn",
         "no-console": "off"
