--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -5,16 +5,14 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: field_prometheus
+    network_mode: host
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.retention.time=15d'
-    ports:
-      - "9090:9090"
-    networks:
-      - monitoring
+    restart: unless-stopped
 
   # 2. The Dashboard
   grafana:
@@ -45,6 +43,8 @@ services:
   node-exporter:
     image: prom/node-exporter:latest
     container_name: field_node_exporter
+    network_mode: host
+    pid: host
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -52,10 +52,8 @@ services:
     command:
       - '--path.procfs=/host/proc'
       - '--path.sysfs=/host/sys'
-    ports:
-      - "9100:9100"
-    networks:
-      - monitoring
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    restart: unless-stopped
 
   # 4. The "RAPL Sim" (Custom Validation Logic)
   rapl-sim:
