--- a/monitor/prometheus/prometheus.yml
+++ b/monitor/prometheus/prometheus.yml
@@ -8,12 +8,12 @@ scrape_configs:
 
   - job_name: 'z87-linux-host'
     static_configs:
-      - targets: ['node-exporter:9100']
+      - targets: ['localhost:9100']
 
   - job_name: 'rapl-validation-logic'
     static_configs:
-      - targets: ['rapl-sim:8000']
+      - targets: ['localhost:8000']
 
   - job_name: 'nvidia-dcgm'
     static_configs:
-      - targets: ['dcgm-exporter:9400']
+      - targets: ['localhost:9400']
