--- a/monitor/prometheus/prometheus.yml
+++ b/monitor/prometheus/prometheus.yml
@@ -1,19 +1,19 @@
 global:
-  scrape_interval: 5s # High resolution for "Real Time" feel
+  scrape_interval: 5s 
 
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['127.0.0.1:9090']
 
   - job_name: 'z87-linux-host'
     static_configs:
-      - targets: ['localhost:9100']
+      - targets: ['127.0.0.1:9100']
 
   - job_name: 'rapl-validation-logic'
     static_configs:
-      - targets: ['localhost:8000']
+      - targets: ['127.0.0.1:8000']
 
   - job_name: 'nvidia-dcgm'
     static_configs:
-      - targets: ['localhost:9400']
+      - targets: ['127.0.0.1:9400']
